# src/Api/Routes/UserRoutes.ts
@@ -15,7 +15,7 @@ const router = express.Router();
 const userController = new UserController();
 router.post("/user/login", userController.login)
 router.post("/user/register", userController.createUser)
-
+router.post("/user/change-password", authenticateToken, userController.changePassword);
 
 module.exports = router;
 
