# src/Application/Features/User/Requests/ChangePasswordRequest.ts
@@ -1,0 +1,4 @@
+export class ChangePasswordRequest{
+    public oldPassword: string;
+    public newPassword: string;
+}
