# swagger_output.json
@@ -19,29 +19,23 @@
     }
   },
   "paths": {
-    "/role": {
-      "post": {
+    "/role/{roleId}": {
+      "get": {
         "tags": [
           "Role"
         ],
         "description": "get role by Id",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
+            "name": "roleId",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "roleId": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -149,7 +143,7 @@
         "tags": [
           "User"
         ],
-        "description": "get role by Id",
+        "description": "Create new User",
         "parameters": [
           {
             "name": "body",
@@ -179,6 +173,47 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/user/change-password": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "User change password",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "oldPassword": {
+                  "example": "any"
+                },
+                "newPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
